fix: fix margin-bottom for cards on mobile divices

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -336,7 +336,7 @@ body {
  }
 }
 
-@media (max-width: 380px) {
+@media (max-width: 431px) {
  .advantages {
   &__cards-wrapper {
    gap: 15px;
